[package]
name = "secr"
version = "1.2.0"
edition = "2024"
license = "MIT"
description = "A simple secret manager"
repository = "https://github.com/zacharysiegel/secr"
readme = "./readme.md"
keywords = ["secret", "secrets_manager", "cli"]
categories = ["cryptography", "development-tools"]
authors = ["Zachary Siegel <hello@zach.ro>"]

[dependencies]
chacha20poly1305 = { version = "0.10", features = ["std"] }
clap = { version = "4.5", features = ["cargo"] }
base64 = { version = "0.22" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = { version = "0.10" }

